agregué comandos básicos de git

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset = "utf-8">
     <title>Comandos git</title>
 </head>
 <body>
     <h1>Jorge Alegria</h1>
     <h1> comando git </h1>
-
+    <h2> comandos básicos </h2>
+    <ul>
+        <li>git add para agregar a la etapa de stage </li>
+        <li>git commit -m "" para crear commits</li>
+    </ul>
 </body>
 </html>
