Añadí hoja de estilo, le puse miestilo.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset = "utf-8">
+<link rel = "stylesheet" href = "css/miestilo.css">
     <title>Comandos git</title>
 </head>
 <body>
@@ -9,8 +10,10 @@
     <h1> comando git </h1>
     <h2> comandos básicos </h2>
     <ul>
+        <li> git init para inicializar un repositorio</li>
         <li>git add para agregar a la etapa de stage </li>
         <li>git commit -m "" para crear commits</li>
+        <li> git log para ver el reporte del repositorio </li>
     </ul>
 </body>
 </html>
