--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>git add para agregar a la etapa de stage </li>
         <li>git commit -m "" para crear commits</li>
         <li> git log para ver el reporte del repositorio </li>
+        <li>git checkout para revisar un commit</li>
     </ul>
 </body>
 </html>
