--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>git commit -m "" para crear commits</li>
         <li> git log para ver el reporte del repositorio </li>
         <li>git checkout para revisar un commit</li>
+        <li>para volver a la rama actualizada git checkout master</li>
     </ul>
 </body>
 </html>
