Añadí una pagina con información de acerca de

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <li>git checkout para revisar un commit</li>
         <li>para volver a la rama actualizada git checkout master</li>
     </ul>
+    <a href="acercade.html"> Información de la página</a>
 </body>
 </html>
