agregué el nombre de la materia

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Comandos git</title>
 </head>
 <body>
+
+    <h1> Infraestructura de Desarrollo Web </h1>
     <h1>Jorge Alegria</h1>
     <h1> comando git </h1>
     <h2> comandos básicos </h2>
