--- a/acercade.html
+++ b/acercade.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Acerca de la página</h1>
 <p>comandos básicos de git</p>
+<p>Esta aplicación es un ejemplo de como usar ramas dentro de un repositorio en git, por lo cual esta parte se realizó en una rama diferente a master</p>
 </body>
 </html>
